[package]
name = "tokio_safe_block_on"
version = "0.2.0"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2018"
description = "Provides the ability to execute async code from a sync context, without blocking a tokio core thread or busy looping the cpu."
keywords = ["tokio", "asynchronous"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/tokio_safe_block_on"
repository = "https://github.com/neonphog/tokio_safe_block_on"

[dependencies]
futures = "0.3"
tokio = { version = "0.3", features = ["time", "rt", "io-util", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "0.3", features = ["macros"] }
assert_matches = "1"
